--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.5.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.0.3",
     "serve": "^11.0.2",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5"
